fix header z-index when it's hidden

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,6 @@
 @import "mixins";
 
+.section-header,
 page-header {
   transition: all .5s ease-in-out !important;
 }
